--- a/product-preview-card-component/index.html
+++ b/product-preview-card-component/index.html
@@ -28,7 +28,7 @@
   <body>
     <div class="container">
       <div class="left-photo">
-        <img src="/images/image-product-desktop.jpg" alt="" />
+        <img src="images/image-product-desktop.jpg" alt="" />
       </div>
       <div class="content-text">
         <div><strong>Perfume</strong></div>
@@ -44,7 +44,7 @@
           <span>$169.99</span>
         </div>
         <div class="buy-btn">
-          <button><img src="/images/icon-cart.svg" />Add to Cart</button>
+          <button><img src="images/icon-cart.svg" />Add to Cart</button>
         </div>
       </div>
     </div>
