--- a/product-preview-card-component/index2.html
+++ b/product-preview-card-component/index2.html
@@ -27,20 +27,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="app">
-      <div class="photo"></div>
-      <div class="info">
-        <strong>Perfume</strong>
-        <h1>Gabrielle Essence Eau De Parfum</h1>
+    <div class="container">
+      <div class="content">
+        <img src="images/image-product-desktop.jpg" alt="" />
+        <div class="content-text">
+          <strong>Perfume</strong>
+          <h1>Gabrielle Essence Eau De Parfum</h1>
 
-        <p>
-          A floral, solar and voluptuous interpretation composed by Olivier
-          Polge, Perfumer-Creator for the House of CHANEL.
-        </p>
+          <p>
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
 
-        <strong>$149.99</strong>
-        <span>$169.99</span>
-        <button><img src="images/icon-cart.svg" />Add to Cart</button>
+          <strong>$149.99</strong>
+          <span>$169.99</span>
+
+          <button><img src="images/icon-cart.svg" />Add to Cart</button>
+        </div>
       </div>
     </div>
   </body>
