--- a/product-preview-card-component/index.html
+++ b/product-preview-card-component/index.html
@@ -30,18 +30,25 @@
     <div class="app">
       <div class="photo"></div>
       <div class="info">
-        <strong>Perfume</strong>
-        <h1>Gabrielle Essence Eau De Parfum</h1>
+        <strong class="cathegory">Perfume</strong>
+        <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
 
         <p>
           A floral, solar and voluptuous interpretation composed by Olivier
           Polge, Perfumer-Creator for the House of CHANEL.
         </p>
 
-        <strong>$149.99</strong>
+        <strong class="price">$149.99</strong>
         <span>$169.99</span>
         <button><img src="images/icon-cart.svg" />Add to Cart</button>
       </div>
     </div>
+    <footer>
+      <span
+        >Chalenge by
+        <a href="https://www.frontendmentor.io/">FrontendMentor</a>. Create code
+        <a href="https://github.com/ctworzewski">Cezary Tworzewski</a></span
+      >
+    </footer>
   </body>
 </html>
